# libAMDA

./: meson.build
src/: AMDA_Rest.cpp  AMDA_Rest.h  AMDA_reader.cpp  AMDA_reader.h  data.h
subprojects/: cpr.wrap  mongoose.wrap
tests/RandomAMDA/: RandomAMDA.cpp
tests/SimpleREST/: SimpleREST.cpp
tests/VectorRead/: vector.txt  vector_read.cpp
